<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/product_list_filter_dialog_et_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_search_filter_by_brand" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/product_list_filter_dialog_et_price_from"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="0"
            android:hint="@string/home_search_filter_by_price_from" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="-"/>

        <EditText
            android:id="@+id/product_list_filter_dialog_et_price_to"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="999000000"
            android:hint="@string/home_search_filter_by_price_to" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/home_search_filter_sort_title" />
    <RadioGroup
        android:id="@+id/product_list_filter_dialog_rg_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/product_list_filter_dialog_rg_sort_by_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginRight="20dp"
            android:text="@string/home_search_filter_sort_by_price" />

        <RadioButton
            android:id="@+id/product_list_filter_dialog_rg_sort_by_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_filter_sort_by_name" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/home_search_filter_sort_direction_title" />
    <RadioGroup
        android:id="@+id/product_list_filter_dialog_rg_sort_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/product_list_filter_dialog_rg_sort_order_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginRight="20dp"
            android:text="@string/home_search_filter_sort_direction_desc" />
        <RadioButton
            android:id="@+id/product_list_filter_dialog_rg_sort_order_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_filter_sort_direction_asc" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/product_list_filter_btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/home_search_filter_apply" />

        <Button
            android:id="@+id/product_list_filter_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_cancel"
            />
    </LinearLayout>
</LinearLayout>