<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/nav_nested_graph_home_product_list">

    <navigation android:id="@+id/nav_nested_graph_home_product_list"
        app:startDestination="@id/nav_home_product_list"
        >
        <fragment
            android:id="@+id/nav_home_product_list"
            android:label="@string/app_bar_title_product_list"
            android:name="vn.edu.hutech.computerstore.ui.home.product.list.ProductListFragment"
            tools:layout="@layout/fragment_product_list"
            android:background="@drawable/background_gradient"
            >
            <action
                android:id="@+id/action_nav_home_product_list_nav_home_product_detail"
                app:popEnterAnim="@android:anim/slide_in_left"
                app:popExitAnim="@android:anim/slide_out_right"
                app:destination="@id/nav_home_product_detail" />
        </fragment>

        <fragment
            android:id="@+id/nav_home_product_detail"
            android:name="vn.edu.hutech.computerstore.ui.home.product.detail.ProductDetailFragment"
            android:label="@string/app_bar_title_product_detail"
            tools:layout="@layout/fragment_product_detail" >
            <action
                android:id="@+id/action_nav_home_product_detail_to_nav_home_product_list"
                app:popEnterAnim="@android:anim/slide_in_left"
                app:popExitAnim="@android:anim/slide_out_right"
                app:destination="@id/nav_home_product_list"
                app:popUpToInclusive="true"
                app:popUpTo="@id/nav_home_product_list" />
        </fragment>
    </navigation>

    <fragment
        android:id="@+id/nav_home_cart_list"
        android:name="vn.edu.hutech.computerstore.ui.home.cart.CartListFragment"
        android:label="@string/app_bar_title_cart_list"
        tools:layout="@layout/fragment_cart_list" >
    </fragment>

    <navigation android:id="@+id/nav_nested_graph_home_order_list"
        app:startDestination="@id/nav_home_order_list">
        <fragment
            android:id="@+id/nav_home_order_list"
            android:name="vn.edu.hutech.computerstore.ui.home.order.list.OrderListFragment"
            android:label="@string/app_bar_title_order_list"
            tools:layout="@layout/fragment_order_list" >
            <action
                android:id="@+id/action_nav_home_order_list_to_order_list_detail_fragment"
                app:destination="@id/nav_home_order_list_detail" />
        </fragment>
        <fragment
            android:id="@+id/nav_home_order_list_detail"
            android:name="vn.edu.hutech.computerstore.ui.home.order.detail.OrderListDetailFragment"
            android:label="@string/app_bar_title_order_detail"
            tools:layout="@layout/fragment_order_list_detail" >
            <action
                android:id="@+id/action_order_list_detail_fragment_to_nav_home_order_list"
                app:destination="@id/nav_home_order_list" />
        </fragment>
    </navigation>

    <navigation android:id="@+id/nav_nested_graph_home_profile"
        app:startDestination="@id/nav_home_profile">
        <fragment
            android:id="@+id/nav_home_profile"
            android:name="vn.edu.hutech.computerstore.ui.home.profile.ProfileFragment"
            android:label="@string/app_bar_title_profile"
            tools:layout="@layout/fragment_profile" >
            <action
                android:id="@+id/action_nav_home_profile_to_nav_home_profile_term_service"
                app:destination="@id/nav_home_profile_term_service" />
            <action
                android:id="@+id/action_nav_home_profile_to_nav_home_profile_account"
                app:destination="@id/nav_home_profile_account" />
        </fragment>
        <fragment
            android:id="@+id/nav_home_profile_term_service"
            android:name="vn.edu.hutech.computerstore.ui.home.profile.serviceterm.TermServiceFragment"
            android:label="@string/app_bar_title_profile_term_service"
            tools:layout="@layout/fragment_term_service" >
            <action
                android:id="@+id/action_nav_home_profile_term_service_to_nav_home_profile"
                app:destination="@id/nav_home_profile" />
        </fragment>
        <fragment
            android:id="@+id/nav_home_profile_account"
            android:name="vn.edu.hutech.computerstore.ui.home.profile.account.AccountFragment"
            android:label="@string/app_bar_title_profile_account"
            tools:layout="@layout/fragment_account">
            <action
                android:id="@+id/action_nav_home_profile_account_to_nav_home_profile"
                app:destination="@id/nav_home_profile" />
        </fragment>
    </navigation>
</navigation>