<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="5dp"
    android:background="@drawable/primary_background_bitmap"
    app:contentPadding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/order_list_tv_title_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/order_list_order_date"/>

        <TextView
            android:id="@+id/order_list_tv_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/order_list_tv_title_order_date"
            android:text="2024-03-12" />

        <TextView
            android:id="@+id/order_list_tv_title_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/order_list_tv_title_order_date"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/order_list_order_status" />

        <TextView
            android:id="@+id/order_list_tv_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/order_list_tv_title_order_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/order_list_tv_title_order_status"
            android:text="dang Xu ly"
            />

        <TextView
            android:id="@+id/order_list_tv_title_total_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/order_list_tv_title_order_status"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/order_list_order_total_items" />

        <TextView
            android:id="@+id/order_list_tv_total_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/order_list_tv_title_order_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/order_list_tv_title_total_items"
            android:text="7"
            />

        <TextView
            android:id="@+id/order_list_tv_title_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/order_list_tv_title_total_items"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/order_list_order_total_price" />

        <TextView
            android:id="@+id/order_list_tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/order_list_tv_title_total_items"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/order_list_tv_title_total_price"
            android:text="123,000,000 VND"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>